Añadidas posiciones en los iconos del menú.

--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -75,6 +75,9 @@
                         {% endfor %}
                     </ul>
                     <ul class="navbar-nav flex-row ml-auto">
+                        {% for item in getIncludeViews('MenuTemplate', 'MenuIconAfter') %}
+                            {% include item['path'] %}
+                        {% endfor %}
                         <li class="nav-item{{ template == 'MegaSearch.html.twig' ? ' active' : '' }}"
                             title="{{ trans('search') }}">
                             <a class="nav-link" href="MegaSearch">
@@ -101,6 +104,9 @@
                                 </a>
                             </div>
                         </li>
+                        {% for item in getIncludeViews('MenuTemplate', 'MenuIconBefore') %}
+                            {% include item['path'] %}
+                        {% endfor %}
                     </ul>
                 </div>
             {% endblock %}
