--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -119,6 +119,9 @@
                                 <a class="dropdown-item" href="{{ fsc.user.url() }}">
                                     <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i> {{ fsc.user.nick }}
                                 </a>
+                                {% for item in getIncludeViews('MenuTemplate', 'MenuIconUser') %}
+                                    {% include item['path'] %}
+                                {% endfor %}
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="?logout=TRUE">
                                     <i class="fas fa-door-open fa-fw" aria-hidden="true"></i> {{ trans('logout') }}
