--- a/Core/View/Master/MicroTemplate.html.twig
+++ b/Core/View/Master/MicroTemplate.html.twig
@@ -59,6 +59,7 @@
                 {{ showMessage(log, ['warning'], 'warning') }}
                 {{ showMessage(log, ['notice'], 'success') }}
                 {{ showMessage(log, ['info'], 'info') }}
+                {{ flashMessages() }}
             {% endblock %}
             {% block body %}
             {% endblock %}
