--- a/Core/View/Updater.html.twig
+++ b/Core/View/Updater.html.twig
@@ -28,6 +28,7 @@
                 {{ showMessage(log, ['warning'], 'warning') }}
                 {{ showMessage(log, ['notice'], 'success') }}
                 {{ showMessage(log, ['info'], 'info') }}
+                {{ flashMessages() }}
             </div>
         </div>
     </div>
