--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -116,6 +116,7 @@
                         {{ showMessage(log, ['warning'], 'warning') }}
                         {{ showMessage(log, ['notice'], 'success') }}
                         {{ showMessage(log, ['info'], 'info') }}
+                        {{ flashMessages() }}
                     </div>
                 </div>
             </div>
