--- a/Core/View/Master/ListController.html.twig
+++ b/Core/View/Master/ListController.html.twig
@@ -72,7 +72,7 @@
                                        href="EditPageOption?code={{ viewName }}&url={{ view.model.url() | url_encode }}">
                                         <i class="{{ view.icon }} fa-fw" aria-hidden="true"></i> {{ view.title }}
                                         {% if view.settings.customized %}
-                                            <i class="fas fa-user-pen ml-2" title="{{ trans('personalized') }}"></i>
+                                            <i class="fa-solid fa-user-pen ml-2" title="{{ trans('personalized') }}"></i>
                                         {% endif %}
                                     </a>
                                 {% endfor %}
