--- a/Core/View/CopyAsiento.html.twig
+++ b/Core/View/CopyAsiento.html.twig
@@ -22,8 +22,11 @@
                                         <div class="form-group">
                                             <select name="idempresa" class="form-control" required>
                                                 {% for item in fsc.codeModel.all('empresas','idempresa','nombrecorto',false) %}
-                                                    {% set selected = item.code == fsc.model.idempresa ? ' selected' : '' %}
-                                                    <option value="{{ item.code }}"{{ selected }}>{{ item.description }}</option>
+                                                    {% if item.code == fsc.model.idempresa %}
+                                                        <option value="{{ item.code }}" selected>{{ item.description }}</option>
+                                                    {% else %}
+                                                        <option value="{{ item.code }}">{{ item.description }}</option>
+                                                    {% endif %}
                                                 {% endfor %}
                                             </select>
                                         </div>
@@ -69,7 +72,7 @@
                             </div>
                         </div>
                         <div class="table-responsive">
-                            <table class="table table-hover">
+                            <table class="table table-hover mb-0">
                                 <thead>
                                 <tr>
                                     <th>{{ trans('subaccount') }}</th>
@@ -85,8 +88,8 @@
                                         <td>{{ line.codsubcuenta }}</td>
                                         <td>{{ line.codcontrapartida }}</td>
                                         <td>{{ line.concepto }}</td>
-                                        <td class="text-right">{{ fsc.toolBox().coins().format(line.debe) }}</td>
-                                        <td class="text-right">{{ fsc.toolBox().coins().format(line.haber) }}</td>
+                                        <td class="text-right">{{ money(line.debe) }}</td>
+                                        <td class="text-right">{{ money(line.haber) }}</td>
                                     </tr>
                                 {% endfor %}
                                 </tbody>
