Cambiar la forma de cargar FontAwesome por SVG+JS.

--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -42,7 +42,6 @@
     {% endfor %}
     {% block css %}
         <link rel="stylesheet" href="{{ asset('node_modules/bootstrap/dist/css/bootstrap.min.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('node_modules/@fortawesome/fontawesome-free/css/all.min.css') }}"/>
         <link rel="stylesheet" href="{{ asset('Dinamic/Assets/CSS/custom.css') }}?v=6"/>
     {% endblock %}
     {# Adds custom CSS assets #}
@@ -61,6 +60,7 @@
         <script src="{{ asset('node_modules/bootbox/dist/bootbox.min.js') }}"></script>
         <script src="{{ asset('node_modules/bootbox/dist/bootbox.locales.min.js') }}"></script>
         <script src="{{ asset('node_modules/pace-js/pace.min.js') }}"></script>
+        <script src="{{ asset('node_modules/@fortawesome/fontawesome-free/js/all.js') }}"></script>
         <script src="{{ asset('Dinamic/Assets/JS/Custom.js') }}?v=6"></script>
     {% endblock %}
     {# Adds custom JS assets #}
