--- a/Test/__files/testTemplate.html.twig
+++ b/Test/__files/testTemplate.html.twig
@@ -4,3 +4,9 @@ testTemplate
 {{ money(123.45) }}
 {{ number(123.45) }}
 {{ trans('save') }}
+{{ bytes(0, 0) }}
+{{ bytes(1, 1) }}
+{{ bytes(2, 2) }}
+{{ bytes(1025, 1) }}
+{{ bytes(1048577, 0) }}
+{{ bytes(1073741825) }}
