Corregida la carga del JS de font-awesome.

--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -61,7 +61,7 @@
         <script src="{{ asset('node_modules/bootbox/dist/bootbox.min.js') }}"></script>
         <script src="{{ asset('node_modules/bootbox/dist/bootbox.locales.min.js') }}"></script>
         <script src="{{ asset('node_modules/pace-js/pace.min.js') }}"></script>
-        <script src="{{ asset('node_modules/@fortawesome/fontawesome-free/js/all.js') }}"></script>
+        <script src="{{ asset('node_modules/@fortawesome/fontawesome-free/js/all.min.js') }}"></script>
         <script src="{{ asset('Dinamic/Assets/JS/Custom.js') }}?v=6"></script>
     {% endblock %}
     {# Adds custom JS assets #}
