Eliminado el type="text/javascript" de los scripts.

--- a/Core/View/Master/MicroTemplate.html.twig
+++ b/Core/View/Master/MicroTemplate.html.twig
@@ -42,9 +42,9 @@
             <link rel="stylesheet" href="{{ css }}" />
         {% endfor %}
         {% block javascripts %}
-            <script type="text/javascript" src="{{ asset('node_modules/jquery/dist/jquery.min.js') }}"></script>
-            <script type="text/javascript" src="{{ asset('node_modules/bootstrap/dist/js/bootstrap.bundle.min.js') }}"></script>
-            <script type="text/javascript" src="{{ asset('node_modules/@fortawesome/fontawesome-free/js/all.min.js') }}"></script>
+            <script src="{{ asset('node_modules/jquery/dist/jquery.min.js') }}"></script>
+            <script src="{{ asset('node_modules/bootstrap/dist/js/bootstrap.bundle.min.js') }}"></script>
+            <script src="{{ asset('node_modules/@fortawesome/fontawesome-free/js/all.min.js') }}"></script>
         {% endblock %}
         {# Adds custom JS assets #}
         {% for js in assetManager.get('js') %}
