Corregido bug al mostrar el texto del email a enviar: se estaba escapando el html 2 veces.

--- a/Core/View/SendMail.html.twig
+++ b/Core/View/SendMail.html.twig
@@ -97,7 +97,7 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <textarea name="body" rows="5" class="form-control">{{ fsc.newMail.text }}</textarea>
+                                <textarea name="body" rows="5" class="form-control">{{ fsc.newMail.text | raw }}</textarea>
                             </div>
                             {% if fsc.newMail.signature %}
                                 <div class="form-group">
