--- a/Core/View/Tab/AttachedFilePreview.html.twig
+++ b/Core/View/Tab/AttachedFilePreview.html.twig
@@ -9,10 +9,10 @@
             </button>
             <div class="dropdown-menu">
                 <a class="dropdown-item" target="_blank" href="{{ asset(file.url('download')) }}">
-                    {{ trans('valid-for-day') }}
+                    <i class="fa-regular fa-hourglass-half fa-fw mr-1"></i> {{ trans('valid-for-day') }}
                 </a>
                 <a class="dropdown-item" target="_blank" href="{{ asset(file.url('download-permanent')) }}">
-                    {{ trans('unlimited') }}
+                    <i class="fa-solid fa-circle-check fa-fw mr-1"></i> {{ trans('unlimited') }}
                 </a>
             </div>
         </div>
